# hv-utils

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml  release.yml
src/hv_utils/: __init__.py  cron.py  expiration.py  hv_types.py  parse_env.py  parse_str.py  sentinel.py
tests/: __init__.py  test_copyright_header.py  test_cron.py  test_env_helpers.py  test_expiration.py  test_hello.py  test_parse_str.py  test_sentinel.py
tools/: __init__.py  copyright_header.py  release_tag.py
