[project]
name = "hv-utils"
version = "0.0.0.dev1"
description = "Simple library to keep useful Python utilities in one place."
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "TwilightSparkle42", email = "jaden.corr42@gmail.com" }
]
requires-python = ">=3.12"
keywords = ["utilities", "helpers", "hv-utils"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Typing :: Typed",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/HovorunBot/hv-utils"
Repository = "https://github.com/HovorunBot/hv-utils"
Issues = "https://github.com/HovorunBot/hv-utils/issues"

[dependency-groups]
dev = [
    "click>=8.1.7",
    "mypy>=1.12.0",
    "pre-commit>=3.8.0",
    "pytest>=8.3.3",
    "pytest-cov>=5.0.0",
    "ruff>=0.7.1"
]

[build-system]
requires = ["uv_build>=0.9.13,<0.10.0"]
build-backend = "uv_build"

[tool.ruff]
line-length = 120
target-version = "py312"
src = ["src"]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "ANN101", # allow self without annotation
    "ANN102", # allow cls without annotation
    "COM812", # clash with formatter
    "D100",   # allow missing package docstring
    "D104",   # allow missing package docstring
    "ISC001" # clash with formatter
]

[tool.mypy]
python_version = "3.12"
strict = true
mypy_path = "src"
disallow_any_unimported = true
show_error_codes = true
show_error_context = true
pretty = true

[tool.pytest.ini_options]
addopts = ["-ra", "--strict-markers", "--strict-config"]
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["hv_utils"]

[tool.coverage.report]
show_missing = true
