[project]
name = "hv-utils"
version = "0.0.2"
description = "Simple library to keep useful Python utilities in one place."
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "TwilightSparkle42", email = "jaden.corr42@gmail.com" }
]
requires-python = ">=3.12"
keywords = ["utilities", "helpers", "hv-utils"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Typing :: Typed",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/HovorunBot/hv-utils"
Repository = "https://github.com/HovorunBot/hv-utils"
Issues = "https://github.com/HovorunBot/hv-utils/issues"

[dependency-groups]
dev = [
    "click>=8.1.7",
    "freezegun>=1.5.1",
    "git-cliff>=2.10.1",
    "mypy>=1.12.0",
    "pre-commit>=3.8.0",
    "pytest>=8.3.3",
    "pytest-cov>=5.0.0",
    "ruff>=0.7.1",
]

[build-system]
requires = ["uv_build>=0.9.13,<0.10.0"]
build-backend = "uv_build"

[tool.ruff]
line-length = 120
target-version = "py312"
src = ["src"]
preview = true

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "COM812", # clash with formatter
    "D100", # allow missing package docstring
    "D213", # prefer a multi-line summary-first-line style
    "D104", # allow missing package docstring
    "D203", # prefer no blank line before class
    "D211", # prefer no blank line before class
    "ISC001" # clash with formatter
]
extend-select = ["CPY"]

per-file-ignores = { "tests/*" = [
    "S101"  # S101: allow ``assert`` in tests
] }

[tool.ruff.lint.flake8-copyright]
notice-rgx = "Copyright \\(c\\) [0-9]{4}"

[tool.mypy]
python_version = "3.12"
strict = true
mypy_path = "."
disallow_any_unimported = true
show_error_codes = true
show_error_context = true
pretty = true

[tool.pytest.ini_options]
addopts = ["-ra", "--strict-markers", "--strict-config"]
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["hv_utils"]

[tool.coverage.report]
show_missing = true

[tool.uv]
cache-dir = ".uv-cache"

[tool.git-cliff.changelog]
header = "# Changelog\n"
body = """
{% set main_author = config.changelog.main_author | default(value="TwilightSparkle42") %}
{% set repo = "https://github.com/HovorunBot/hv-utils" %}
{% if versions is defined %}{% for version in versions %}
## {{ version.tag | default(value="Unreleased") }} - {{ version.date | default(value="Unreleased") }}
{% if version.commits | length == 0 %}- No notable changes.{% else %}{% for group, grouped_commits in version.commits | group_by(attribute="group") %}
### {{ group | default(value="Other") }}
{% for commit in grouped_commits %}- {{ commit.message | split(pat="\\n") | first }} [[{{ commit.id | truncate(length=8, end="") }}]({{ repo }}/commit/{{ commit.id }})]{% if commit.author.name and commit.author.name != main_author %} — by {{ commit.author.name }}{% endif %}
{% endfor %}{% endfor %}{% endif %}
{% endfor %}{% else %}
## Unreleased
{% for group, grouped_commits in commits | group_by(attribute="group") %}
### {{ group | default(value="Other") }}
{% for commit in grouped_commits %}- {{ commit.message | split(pat="\\n") | first }} [[{{ commit.id | truncate(length=8, end="") }}]({{ repo }}/commit/{{ commit.id }})]{% if commit.author.name and commit.author.name != main_author %} — by {{ commit.author.name }}{% endif %}
{% endfor %}{% endfor %}
{% endif %}
"""
trim = true
unreleased = false
footer = "\n"

[tool.git-cliff.git]
conventional_commits = true
filter_unmapped = true
tag_pattern = "v[0-9].*"
protect_tags = false
skip_tags = ""
repository = "https://github.com/HovorunBot/hv-utils"
main_author = "TwilightSparkle42"

[[tool.git-cliff.git.commit_parsers]]
message = "^feat"
group = "Features"

[[tool.git-cliff.git.commit_parsers]]
message = "^fix"
group = "Bug Fixes"

[[tool.git-cliff.git.commit_parsers]]
message = "^docs"
group = "Documentation"

[[tool.git-cliff.git.commit_parsers]]
message = "^style"
group = "Style"

[[tool.git-cliff.git.commit_parsers]]
message = "^refactor"
group = "Refactoring"

[[tool.git-cliff.git.commit_parsers]]
message = "^perf"
group = "Performance"

[[tool.git-cliff.git.commit_parsers]]
message = "^test"
group = "Tests"

[[tool.git-cliff.git.commit_parsers]]
message = "^build"
group = "Build"

[[tool.git-cliff.git.commit_parsers]]
message = "^ci"
group = "CI"

[[tool.git-cliff.git.commit_parsers]]
message = "^chore"
group = "Chores"

[[tool.git-cliff.git.commit_parsers]]
message = "^revert"
group = "Reverts"

[tool.git-cliff.bump]
initial_tag = "v0.1.0"
