[project]
name = "hv-utils"
version = "0.1.0"
description = "Typed, dependency-free utilities for the everyday tasks you keep re-implementing in every project."
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "TwilightSparkle42", email = "jaden.corr42@gmail.com" }
]
requires-python = ">=3.12"
keywords = ["utilities", "helpers", "hv-utils"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Typing :: Typed",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/HovorunBot/hv-utils"
Repository = "https://github.com/HovorunBot/hv-utils"
Issues = "https://github.com/HovorunBot/hv-utils/issues"

[dependency-groups]
dev = [
    "click>=8.1.7",
    "commitizen>=3.29.0",
    "freezegun>=1.5.1",
    "mypy>=1.12.0",
    "pre-commit>=3.8.0",
    "pytest>=8.3.3",
    "pytest-cov>=5.0.0",
    "ruff>=0.7.1",
]

[build-system]
requires = ["uv_build>=0.9.13,<0.10.0"]
build-backend = "uv_build"

[tool.ruff]
line-length = 120
target-version = "py312"
src = ["src"]
preview = true

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "COM812", # clash with formatter
    "D100", # allow missing package docstring
    "D213", # prefer a multi-line summary-first-line style
    "D104", # allow missing package docstring
    "D203", # prefer no blank line before class
    "D211", # prefer no blank line before class
    "ISC001" # clash with formatter
]
extend-select = ["CPY"]

per-file-ignores = { "tests/*" = [
    "S101"  # S101: allow ``assert`` in tests
] }

[tool.ruff.lint.flake8-copyright]
notice-rgx = "Copyright \\(c\\) [0-9]{4}"

[tool.mypy]
python_version = "3.12"
strict = true
mypy_path = "."
disallow_any_unimported = true
show_error_codes = true
show_error_context = true
pretty = true

[tool.pytest.ini_options]
addopts = ["-ra", "--strict-markers", "--strict-config"]
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["hv_utils"]

[tool.coverage.report]
show_missing = true

[tool.uv]
cache-dir = ".uv-cache"

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.1.0"
tag_format = "$version"
legacy_tag_formats = ["v$version"]
ignored_tag_foapprovrmats = ["*.*.*.*", "*.post*"]
version_scheme = "pep440"
version_provider = "pep621"
changelog_file = "CHANGELOG.md"
update_changelog_on_bump = true
